# TMVBeta

./: LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
src/tmvbeta/: minimax_tilting_sampler.py  tmvbeta.py
src/tmvbeta/.ipynb_checkpoints/: tmvbeta-checkpoint.py
tests/tmvbeta/.ipynb_checkpoints/: test_tmvbeta-checkpoint.py
