[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmvbeta"
version = "0.1.0"
authors = [
  { name="Michael Fauss", email="mfauss@ets.org" },
]
description = "Truncated multivariate beta distribution on unit hypercube"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cvxpy",
    "gridnm @ git+https://gitlab.ets.org/rms/pdsm/testsecurity/gridnm",
    "numpy",
    "scipy",
    "sympy",
]

[project.urls]
Homepage = "https://gitlab.ets.org/rms/pdsm/testsecurity/tmvbeta"
Issues = "https://gitlab.ets.org/rms/pdsm/testsecurity/tmvbeta/-/issues"

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/tmvbeta"
]

[tool.hatch.metadata]
allow-direct-references = true